@@ -52,7 +52,12 @@ __thiscall void Level::InitializeDevilAngelRoom(bool ForceAngel, bool ForceDevil
 "558bec6aff68????????64a1????????5083ec24535657a1????????33c5508d45??64a3????????8bd9f30f7e05":
 __thiscall int Level::GetRandomRoomIndex(bool IAmErrorRoom, unsigned int Seed);
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ec48040000":
+__thiscall void Level::generate_dungeon(RNG * RNG);
+
 struct Level {
+	uint32_t _stage : 0x0;
+	uint32_t _stageType : 0x4;
 	uint32_t _levelStateFlag : 0x1822c;
 	uint32_t _greedwavesclearedwithoutredheartdamage : 0x18204;
 } : 0x18230;
